--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -27,6 +27,47 @@ body {
         box-sizing: border-box;
         border: 1px solid black;
 
+        .background-style {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            background-position: 50% 50%;
+        }
+
+        .logo-style {
+            position: absolute;
+            width: 100px;
+            height: 40px;
+            background-image: url(../assets/logo.png);
+            background-size: contain;
+            background-repeat: no-repeat;
+            z-index: 999;
+            top: 20px;
+            left: 20px;
+        }
+
+        .copy-container-style {
+            color: white;
+            position: absolute;
+            width: 100%;
+            text-align: center;
+            z-index: 999;
+            display: flex;
+            flex-direction: column;
+            top: 350px;
+
+            .headline-container-style {
+                position: relative;
+            }
+
+            .summary-container-style {
+                position: relative
+            }
+
+
+        }
+
 
         .slide-container-style {
             position: absolute;
@@ -63,6 +104,35 @@ body {
                 background-color: grey;
                 cursor: pointer;
                 pointer-events: auto;
+            }
+        }
+
+        .button-container-style {
+            position: absolute;
+            width: 100%;
+            height: 40px;
+            bottom: 100px;
+            color: white;
+            font-size: 12px;
+            text-align: center;
+            z-index: 200;
+            display: flex;
+            justify-content: space-evenly;
+            line-height: 30px;
+
+            .ad-to-cart-style{
+                position: relative;
+                width: 130px;
+                height: 30px;
+                border: 1px solid white;
+
+            }
+
+            .find-store-style {
+                position: relative;
+                width: 130px;
+                height: 30px;
+                border: 1px solid white;
             }
         }
     }
