--- a/app/scss/_buttons.scss
+++ b/app/scss/_buttons.scss
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: space-evenly;
     line-height: 30px;
+    font-family: "Proxima N W02 Smbd";
 
     .ad-to-cart-style{
         position: relative;
