--- a/app/scss/_slide.scss
+++ b/app/scss/_slide.scss
@@ -5,11 +5,21 @@
     width: 100%;
     height: 100%;
     box-sizing: border-box;
+    max-width: 300px;
+    max-height: 300px;
+    left: 0px;
+    right: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    top: 100px;
+    
 
     .slide-style {
         position: absolute;
         width: 100%;
         height: 100%;
         z-index: 1;
+        cursor: pointer;
+        pointer-events: auto;
     }
 }
