--- a/app/scss/_background.scss
+++ b/app/scss/_background.scss
@@ -6,5 +6,5 @@
     height: 100%;
     background-size: cover;
     background-position: 50% 50%;
-    background-color: darkgray;
+    background-color: rgb(255, 255, 255);
 }
