--- a/app/scss/_buttons.scss
+++ b/app/scss/_buttons.scss
@@ -3,9 +3,9 @@
   .button-container-style {
     position: absolute;
     width: 100%;
-    height: 40px;
-    bottom: 100px;
-    color: white;
+    height: 30px;
+    bottom: 30px;
+    color: rgb(96, 96, 96);
     font-size: 12px;
     text-align: center;
     z-index: 200;
@@ -14,22 +14,41 @@
     line-height: 30px;
     font-family: "Proxima N W02 Smbd";
 
-    .ad-to-cart-style{
+    .ad-to-cart-container-style {
+        width: auto;
         position: relative;
-        width: 130px;
-        height: 30px;
-        border: 1px solid white;
-        user-select: none;
-        cursor: pointer;
+        margin-left: auto;
+        margin-right: auto;
 
+        .ad-to-cart-style{
+            position: relative;
+            width: 130px;
+            height: 30px;
+            border: 1px solid rgb(123, 123, 123);
+            user-select: none;
+            cursor: pointer;
+        }
     }
 
-    .find-store-style {
+    .find-store-container-style {
+        width: auto;
+        margin-left: auto;
+        margin-right: auto;
         position: relative;
-        width: 130px;
-        height: 30px;
-        border: 1px solid white;
-        user-select: none;
-        cursor: pointer;
+
+        .find-store-style {
+            position: relative;
+            width: 130px;
+            height: 30px;
+            border: 1px solid rgb(120, 120, 120);
+            user-select: none;
+            cursor: pointer;
+            // margin-left: auto;
+            // margin-right: auto;
+        }
     }
+
+    
+
+    
 }
