--- a/app/scss/_copy.scss
+++ b/app/scss/_copy.scss
@@ -1,14 +1,14 @@
 
 
 .copy-container-style {
-    color: white;
+    color: rgb(63, 63, 63);
     position: absolute;
     width: 100%;
     text-align: center;
     z-index: 999;
     display: flex;
     flex-direction: column;
-    top: 350px;
+   
     pointer-events: none;
 
 
@@ -16,13 +16,29 @@
         position: relative;
         font-family: "Proxima N W02 Bold";
         user-select: none;
+        max-width: 300px;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 18px;
     }
 
     .summary-container-style {
         position: relative;
         font-family: "Proxima N W01 Reg";
         user-select: none;
+        max-width: 300px;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 14px;
     }
 
 
+}
+
+.copy-position-top {
+    bottom: 100px;
+}
+
+.copy-position-bottom {
+    bottom: 170px;
 }
