--- a/app/scss/_slide.scss
+++ b/app/scss/_slide.scss
@@ -11,7 +11,6 @@
     right: 0px;
     margin-left: auto;
     margin-right: auto;
-    top: 100px;
     
 
     .slide-style {
@@ -24,6 +23,7 @@
 		background-size: contain;
 		background-repeat: no-repeat;
 		background-position: 50% 50%;
+		//transition: ease 0.3s;
     }
 
 	#slide-1 {
@@ -51,5 +51,16 @@
 		background-image: url(../assets/p5.jpg);
 	}
    
+}
+
+.slide-position-top {
+	top: 0px;
+	bottom: 0px;
+	margin-top: auto;
+	margin-bottom: auto;
+}
+
+.slide-position-bottom {
+	top: 20%;
 }
 
