--- a/app/scss/_buttons.scss
+++ b/app/scss/_buttons.scss
@@ -3,50 +3,54 @@
   .button-container-style {
     position: absolute;
     width: 100%;
-    height: 30px;
+    height: 35px;
     bottom: 30px;
     color: rgb(96, 96, 96);
-    font-size: 12px;
-    text-align: center;
+   
     z-index: 200;
     display: flex;
     justify-content: space-evenly;
-    line-height: 30px;
-    font-family: "Proxima N W02 Smbd";
+   
+    
 
-    .ad-to-cart-container-style {
-        width: auto;
-        position: relative;
-        margin-left: auto;
-        margin-right: auto;
+    .button-set-style {
+        display: flex;
+        line-height: 30px;
+        font-family: "Proxima N W02 Smbd";
+        font-size: 12px;
+        text-align: center;
+       // flex-direction: column;
 
         .ad-to-cart-style{
             position: relative;
-            width: 130px;
-            height: 30px;
+            width: auto;
+            height: auto;
             border: 1px solid rgb(123, 123, 123);
             user-select: none;
             cursor: pointer;
+            padding: 2px 20px;
+            margin-left: 10px;
+            margin-right: 10px;
         }
-    }
-
-    .find-store-container-style {
-        width: auto;
-        margin-left: auto;
-        margin-right: auto;
-        position: relative;
 
         .find-store-style {
             position: relative;
-            width: 130px;
-            height: 30px;
+            width: auto;
+            height: auto;
             border: 1px solid rgb(120, 120, 120);
             user-select: none;
             cursor: pointer;
+            padding: 2px 20px;
+            margin-left: 10px;
+            margin-right: 10px;
             // margin-left: auto;
             // margin-right: auto;
         }
+
     }
+
+  
+   
 
     
 
