--- a/app/scss/_copy.scss
+++ b/app/scss/_copy.scss
@@ -8,7 +8,6 @@
     z-index: 999;
     display: flex;
     flex-direction: column;
-   
     pointer-events: none;
 
 
@@ -20,6 +19,8 @@
         margin-left: auto;
         margin-right: auto;
         font-size: 18px;
+        pointer-events: auto;
+        cursor: pointer;
     }
 
     .summary-container-style {
@@ -30,6 +31,9 @@
         margin-left: auto;
         margin-right: auto;
         font-size: 14px;
+        pointer-events: auto;
+        pointer-events: auto;
+        cursor: pointer;
     }
 
 
