--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -6,6 +6,13 @@
 body {
     margin: 0px;
     padding: 0px;
+    min-height: 600px;
+    max-height: 824px;
+    min-width: 320px;
+    max-width: 420px;
+    height: 100%;
+    width: 100%;
+    position: absolute;
 }
 
 
